# jpp

./: .gitmodules  CMakeLists.txt  README.md  build.bat  build.sh
src/: ast.c  ast.h  cli.c  cli.h  lexer.c  lexer.h  llvm.c  llvm.h  log.c  log.h  main.c
test_programs/: hello_world.jpp
